# dezucker-bindings

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
dezucker-rs/: .gitignore  BINDINGS.md  Cargo.toml  build.rs  cbindgen.toml
dezucker-rs/scripts/: generate-bindings.sh
dezucker-rs/src/: ffi.rs  lib.rs  plugin.rs  storage.rs  types.rs
dezucker-rs/tests/: ffi_test.c
kotlin/src/main/kotlin/coffee/outof/dezucker/plugins/: DataTransformer.kt  DezuckerPlugin.kt  ExportContext.kt  OutputSink.kt  PluginMetadata.kt
kotlin/src/main/kotlin/coffee/outof/dezucker/storage/: InternalStorage.kt
kotlin/src/main/kotlin/coffee/outof/dezucker/types/: FormattedPost.kt  PostFragment.kt
