[package]
name = "dezucker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
